# dots-and-boxes-ai

./: .gitignore  .replit  README.md  WARP.md  app.py  pyproject.toml  replit.md
examples/: basic_usage.py
src/dots_and_boxes/: __init__.py  board.py
static/css/: style.css
static/js/: game.js
templates/: index.html
tests/: test_board.py
