[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dots-and-boxes-ai"
version = "0.1.0"
description = "Dots and Boxes board model (separate horizontal/vertical edges) for AI training"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "sitaram" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
